--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,40 @@
+.body {
+    min-height: calc(100vh - 130px);
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .content {
     height: calc(100vh - 160px);
 }
 .pageTitle{
+    background-image: linear-gradient(to right, #0d6efd , blue);
     background-color: #0d6efd;
     color: white;
     margin: 0px -12px 20px -13px;
     padding: 20px;
+}
+
+
+.featuerdcol{
+    z-index: 2;
+    background-image: url("../images/shop-slider.jpg");
+    background:#0d6efd;
+    margin-top: -70px;
+    margin-left:20px;
+    margin-right:20px;
+    padding-top: 0;
+    padding-left:20px;
+    padding-right:20px;
+    min-height: 180px;
+    border-style: dashed;
+    border-color: white;
+}
+.featuers{
+    display: flex;
+    justify-content: center;
+}
+
+.featuerdcol1{
+    background-image: url("./images/shop-slider.jpg");
 }
