--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,32 @@
-.body {
-    min-height: calc(100vh - 130px);
-    padding-top: 30px;
-    padding-bottom: 30px;
+ion-icon {
+    pointer-events: none;
+  }
+html{
+    height: 100%;
 }
-
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;v
+    /*padding-top: 30px;
+    padding-bottom: 30px;*/
+}
+footer{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin-top: auto;
+    background:darkgray;
+    color: white;
+    text-decoration: none;
+}
+.footer ,a{
+    color: white;
+    text-decoration: none;
+}
 .content {
-    height: calc(100vh - 160px);
+    min-height: calc(100vh - 160px);
+    padding-bottom: 60px;
 }
 .pageTitle{
     background-image: linear-gradient(to right, #0d6efd , blue);
@@ -15,27 +36,11 @@
     padding: 20px;
 }
 
-.featuerdcol{
-    z-index: 2;
-    background-image: url("../images/shop-slider.jpg");
-    background:#0d6efd;
-    margin-top: -70px;
-    margin-left:20px;
-    margin-right:20px;
-    padding-top: 0;
-    padding-left:20px;
-    padding-right:20px;
-    min-height: 180px;
-    border-style: dashed;
-    border-color: white;
-}
-.featuers{
-    display: flex;
-    justify-content: center;
-}
-
-.featuerdcol1{
-    background-image: url("./images/shop-slider.jpg");
-}
-
+.message-placeholder{
+    margin-top: 10px;
+    padding: 20px 20px;
+    border-radius: 10px;
+background: rgb(255, 225, 225);
+color: red;
+text-align: center;}
 
