--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
-
+ion-icon {
+    pointer-events: none;
+  }
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
@@ -122,7 +124,7 @@ a {
     font-size: 1.25rem
 }
 
-.show {
+.expand {
     left: 0
 }
 
@@ -147,6 +149,45 @@ a {
     height: 100vh
 }
 
+.brands-dashboard-card{
+    background: goldenrod;
+}
+
+.users-dashboard-card{
+    background: mediumslateblue;
+}
+
+.categories-dashboard-card{
+    background: limegreen;
+}
+
+.products-dashboard-card{
+    background: tomato;
+}
+
+.dashboard-card-title{
+    color: white;
+    font-size: 1.5rem;
+
+}
+
+.card-icon {
+    font-size: 4rem;
+    color: white;
+}
+
+.count-number{
+    font-size: 4rem;
+    text-align: center;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+margin-top: -10px;
+margin-bottom: -20px;
+}
+.product-image-thumbnail{
+    width: 600px;
+    max-width: 100px;
+}
 @media screen and (min-width: 768px) {
     body {
         margin: calc(var(--header-height) + 1rem) 0 0 0;
@@ -172,7 +213,7 @@ a {
         padding: 1rem 1rem 0 0
     }
 
-    .show {
+    .expand {
         width: calc(var(--nav-width) + 156px)
     }
 
