--- a/css/product-card.css
+++ b/css/product-card.css
@@ -1,4 +1,4 @@
-/* Universal styling for all cards*/
+/* Universal styling for all product cards*/
 
 .products-container{
     display: flex;
@@ -94,9 +94,6 @@ font-size: 20px;
     border-radius: 100px;
     color: white;
 }
-
-
-
 
 .view-button{
     background: blue;
